simplify code by new dto